# processR

./: .Rbuildignore  .gitignore  CMakeLists.txt  DESCRIPTION  NAMESPACE  README  README.md  clean.py  clean.sh  configure  run.py  run.sh
.devcontainer/: devcontainer.json
.github/workflows/: R-CMD-check.yml  call-r-check.yml
R/: RcppExports.R  processRExports.R  zzz.R
inst/include/: ProcessR.hpp  SharedR.hpp  SharedRList.hpp  SharedRMutex.hpp  SharedRObject.hpp  SharedRVector.hpp
man/: processR-package.Rd  processR.Rd
src/: Makevars  Makevars.win  ProcessR.cpp  RcppExports.cpp  build_child.sh  rchild.cpp  symbols.rds
src/child/: CMakeLists.txt  RChild.cpp
test/: VectorAccumulation.R  fims_processR.R  test.R  test_call_R.R  test_shared_vector.R  test_sm.R
vignettes/: processR.Rmd
